# malice

./: .gitignore  LICENSE  README.md  default.nix  malice.cabal  test.nix
demo/flip-images/: FlipImages.hs  Linux.hs  Main.hs  Other.hs
malice/: default.nix  malice.cabal  shell.nix
malice-core/: default.nix  malice-core.cabal  shell.nix
malice-core-attoparsec/: LICENSE  default.nix  malice-core-attoparsec.cabal  shell.nix
malice-core-attoparsec/src/Mal/Monad/: Attoparsec.hs
malice-core-attoparsec/src/Mal/Monad/Endpoint/: Attoparsec.hs
malice-core-instances-logger/: default.nix  malice-core-instances-logger.cabal  shell.nix
malice-core-instances-logger/src/Mal/Monad/Instances/: Logger.hs
malice-core-serialize/: default.nix  malice-core-serialize.cabal  shell.nix
malice-core-serialize/src/Mal/Monad/: Serialize.hs
malice-core-serialize/src/Mal/Monad/Endpoint/: Serialize.hs
malice-core-serialize/src/Mal/Monad/Vertex/: Serialize.hs
malice-core/src/Mal/: Monad.hs
malice-core/src/Mal/Monad/: Endpoint.hs  Vertex.hs
malice-core/src/Mal/Monad/Endpoint/: Internal.hs
malice-core/src/Mal/Monad/Eve/: Internal.hs
malice-core/src/Mal/Monad/Mal/: Internal.hs
malice-core/src/Mal/Monad/Vertex/: Yieldable.hs
malice/demo/flip-images/: FlipImages.hs
malice/scripts/new-root/: Main.hs
malice/src/Mal/: MathFacts.hs
malice/src/Mal/Extra/: Binascii.hs
malice/src/Mal/Middle/: Pcap.hs  Socks5.hs
malice/src/Mal/Middle/Socket/: Linux.hs
malice/src/Mal/Middle/Socket/Internal/: Linux.hsc
malice/src/Mal/Protocol/: HTTP.hs
malice/src/Mal/Protocol/TLS/: Backend.hs  Hybrid.hs
malice/tests/manual/https-spy/: Other.hs  Spy.hs
nix/: test.nix  update.sh
scripts/new-root/: Main.hs
src/Mal/: Monad.hs
src/Mal/Extra/: Binascii.hs
src/Mal/Middle/: Pcap.hs  Socket.hs  Socks5.hs  TCP.hs  Vertices.hs
src/Mal/Middle/Socket/: Internal.hsc
src/Mal/Middle/Socket/Internal/: Linux.hsc
src/Mal/Middle/TCP/: Transparent.hs
src/Mal/Monad/: Endpoint.hs  Eve.hs  Mal.hs  Vertex.hs
src/Mal/Monad/Endpoint/: Attoparsec.hs  Basic.hs  Internal.hs  Serialize.hs
src/Mal/Monad/Eve/: Internal.hs
src/Mal/Monad/Internal/: Hoist.hs
src/Mal/Monad/Mal/: Internal.hs
src/Mal/Monad/Vertex/: Serialize.hs  Yieldable.hs
src/Mal/Protocol/: HTTP.hs  TLS.hs
src/Mal/Protocol/TLS/: Hybrid.hs
tests/manual/https-spy/: Linux.hs  Main.hs  Other.hs  Spy.hs
