name:                 malice
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               Nick Spinale
maintainer:           spinalen@gmail.com
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

  exposed-modules:    Mal.Monad
                    , Mal.Monad.Endpoint
                    , Mal.Monad.Endpoint.Serialize
                    , Mal.Monad.Endpoint.Attoparsec
                    , Mal.Monad.Endpoint.Internal
                    , Mal.Monad.Vertex
                    , Mal.Monad.Vertex.Yieldable
                    , Mal.Monad.Vertex.Serialize
                    , Mal.Monad.Eve
                    , Mal.Monad.Eve.Internal
                    , Mal.Monad.Mal
                    , Mal.Monad.Mal.Internal
                    , Mal.Monad.Internal.Hoist

                    , Mal.Protocol.TLS
                    , Mal.Protocol.TLS.Backend
                    , Mal.Protocol.TLS.Hybrid
                    , Mal.Protocol.HTTP

                    , Mal.MathFacts

                    , Mal.Middle.Pcap
                    , Mal.Middle.Socket
                    , Mal.Middle.Socket.Internal
                    , Mal.Middle.TCP
                    , Mal.Middle.TCP.Transparent
                    , Mal.Middle.Socks5
                    , Mal.Middle.Vertices
 
                    , Mal.Extra.Binascii


  build-depends:      base >=4.8 && <5
                    , array
                    , asn1-encoding
                    , asn1-types >= 0.2.0
                    , async >= 2.0
                    , attoparsec
                    , base16-bytestring
                    , bytestring
                    , case-insensitive
                    , cereal >= 0.4
                    , cryptonite >= 0.21
                    , data-default-class
                    , exceptions
                    , http-types
                    , lens
                    , memory >= 0.14.6
                    , monad-logger
                    , monad-unlift
                    , mtl >= 2
                    , network
                    , pcap
                    , socks
                    , text
                    , tls
                    , transformers
                    , x509 >= 1.6.5
                    , x509-store >= 1.6
                    , x509-validation >= 1.6.5


executable new-root
  hs-source-dirs:     scripts/new-root
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

  build-depends:      base >=4.8 && <5
                    , asn1-encoding
                    , asn1-types >= 0.2.0
                    , bytestring
                    , cryptonite >= 0.21
                    , hourglass
                    , optparse-applicative
                    , pem
                    , tls
                    , x509 >= 1.6.5


executable flip-images
  hs-source-dirs:     demo/flip-images
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -threaded
  build-depends:      base >=4.8 && <5
                    , malice
                    , async >= 2.0
                    , attoparsec
                    , base16-bytestring
                    , bytestring
                    , case-insensitive
                    , cryptonite >= 0.21
                    , http-types
                    , JuicyPixels
                    , JuicyPixels-extra
                    , monad-logger
                    , monad-unlift
                    , mtl
                    , network
                    , optparse-applicative
                    , socks
                    , text
                    , tls
                    , x509 >= 1.6.5
                    , x509-store >= 1.6


executable test-https-spy
  hs-source-dirs:     tests/manual/https-spy
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -threaded
  build-depends:      base >=4.8 && <5
                    , malice
                    , async >= 2.0
                    , attoparsec
                    , base16-bytestring
                    , bytestring
                    , case-insensitive
                    , cryptonite >= 0.21
                    , exceptions
                    , http-types
                    , lens
                    , monad-logger
                    , monad-unlift
                    , mtl
                    , network
                    , optparse-applicative
                    , socks
                    , text
                    , tls
                    , x509 >= 1.6.5
                    , x509-store >= 1.6
