name:                 malice-core
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               Nick Spinale
maintainer:           nick@nickspinale.com
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    Mal.Monad
                    , Mal.Monad.Endpoint
                    , Mal.Monad.Endpoint.Internal
                    , Mal.Monad.Vertex
                    , Mal.Monad.Vertex.Yieldable
                    , Mal.Monad.Eve
                    , Mal.Monad.Eve.Internal
                    , Mal.Monad.Mal
                    , Mal.Monad.Mal.Internal
                    , Mal.Monad.Internal.Hoist

  build-depends:      base >=4.8 && <5
                    , mtl >= 2
                    , transformers
                    , bytestring
                    , lens
                    , exceptions
